<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" >
    <data>
        <variable
            name="viewmodel"
            type="com.example.parksparcial.ui.park.viewmodel.ParkViewModel" />
    </data>

<androidx.constraintlayout.widget.ConstraintLayout

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.park.newpark.NewParkFragment">


    <TextView
        android:id="@+id/new_park"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium_size"
        android:text="@string/new_park_string"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="@dimen/standard_size_title"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/NameTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/medium_size"
        android:layout_marginStart="@dimen/medium_size"
        android:layout_marginTop="@dimen/medium_size"
        android:layout_marginEnd="@dimen/medium_size"
        android:hint="@string/name_park_string"
        android:textColorHint="@color/black"
        app:boxStrokeColor="@color/black"
        app:hintTextColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_park">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@={viewmodel.name}"
            android:textColor="@color/black" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/LocationTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/medium_size"
        android:layout_marginStart="@dimen/medium_size"
        android:layout_marginEnd="@dimen/medium_size"
        android:hint="@string/location_park_string"
        android:textColorHint="@color/black"
        app:boxStrokeColor="@color/black"
        app:hintTextColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/NameTv">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/Location_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@={viewmodel.location}"
            android:textColor="@color/black" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium_size"
        android:backgroundTint="@color/blue"
        android:onClick="@{() -> viewmodel.createPark()}"
        android:text="Submit"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/LocationTv"
        app:layout_constraintTop_toBottomOf="@+id/LocationTv" />


</androidx.constraintlayout.widget.ConstraintLayout>
</layout>